--- a/app/base.html
+++ b/app/base.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <title>Bases</title>
 </head>
 <body class="overflow-hidden">
@@ -19,7 +19,7 @@
 <!--bootstrap flex container with padding for leftbar-->
 <!-- loader -->
 <div id="loading"  style="display: none;">
-    <img src="http://localhost:5000/images/loading-gif.gif" alt="loading">
+    <img src="http://188.225.85.141:5000/images/loading-gif.gif" alt="loading">
 </div>
 
 <div class="container-fluid">
@@ -29,20 +29,25 @@
             <div class="leftbar">
                 <div class="leftbar__logo">
                     <!-- img with content from localhost:5000/images/logo.png -->
-                    <img src="http://localhost:5000/images/logo.png" alt="logo" style="height: 64px; width:auto">
+                    <img src="http://188.225.85.141:5000/images/logo.png" alt="logo" style="height: 64px; width:auto">
                 </div>
                 <div class="leftbar__menu">
                     <ul>
                         <li><a href="main.html">Домой</a></li>
                         <li><a href="base.html">Базы</a></li>
                         <li><a href="sender.html">Рассыльщик</a></li>
+                        <li><a href="tariffes.html">Тарифы</a></li>
                     </ul>
                     <!-- username, email and balance in the bottom of leftbar -->
                     <div class="leftbar__user">
-                        <div class="leftbar__user__name">Username: <span id="username"></span></div>
-                        <div class="leftbar__user__email">Email: <span id="email"></span></div>
-                        <a class="leftbar__user__balance" href="balance.html">Balance: <span id="balance"></span></a>
-
+                        <!-- Информация о подписке -->
+                        <div class="leftbar__user__sub">
+                            <div class="leftbar__user__sub__name">Тариф: <span id="subname"></span></div>
+                            <div class="leftbar__user__sub__date">Осталось: <span id="subdaysleft"></span></div>
+                        </div>
+                        <div class="leftbar__user__name">Логин: <span id="username"></span></div>
+                        <div class="leftbar__user__email">Почта: <span id="email"></span></div>
+                        <a class="leftbar__user__balance" href="balance.html">Баланс: <span id="balance"></span></a>
                     </div>
                 </div>
             </div>
@@ -74,10 +79,15 @@
             <span id="price"></span>
             <span id="message" style="display: none;" >Хотите исправить все номера или добавить базу только из валидных?</span>
             <hr>
-        <div class="d-flex flex-row">
-            <button  class="btn btn-primary mr-2"  style="display: none;" id="improve">Исправить</button>
-            <button  class="btn btn-primary"  style="display: none;" id="next">Продолжить так</button>
+        <div class="d-flex flex-row align-items-center" id="basename-container">
+            <button  class="btn btn-primary mr-2"   id="improve">Исправить</button>
+            <button  class="btn btn-primary mr-2"   id="next">Продолжить так</button>
+            <!-- text field for name and label for it -->
+            <div class="basenameContainer">
+                <label for="name" class="mr-2">Название базы</label>
+                <input type="text" name="name" id="basename" class="form-control mr-2">
             </div>
+        </div>
             <!-- scrollable constainer -->
             <ul id="bases" class="overflow-auto" style="max-height:260px ;"></ul>
 
