--- a/app/sender.html
+++ b/app/sender.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="loading"  style="display: none;">
-        <img src="http://localhost:5000/images/loading-gif.gif" alt="loading">
+        <img src="http://188.225.85.141:5000/images/loading-gif.gif" alt="loading">
     </div>
     <!-- leftbar -->
     <div class="container-fluid">
@@ -23,19 +23,25 @@
                 <div class="leftbar">
                     <div class="leftbar__logo">
                         <!-- img with content from localhost:5000/images/logo.png -->
-                        <img src="http://localhost:5000/images/logo.png" alt="logo" style="height: 64px; width:auto">
+                        <img src="http://188.225.85.141:5000/images/logo.png" alt="logo" style="height: 64px; width:auto">
                     </div>
                     <div class="leftbar__menu">
                         <ul>
                             <li><a href="main.html">Домой</a></li>
                             <li><a href="base.html">Базы</a></li>
                             <li><a href="sender.html">Рассыльщик</a></li>
+                            <li><a href="tariffes.html">Тарифы</a></li>
                         </ul>
                         <!-- username, email and balance in the bottom of leftbar -->
                         <div class="leftbar__user">
-                            <div class="leftbar__user__name">Username: <span id="username"></span></div>
-                            <div class="leftbar__user__email">Email: <span id="email"></span></div>
-                            <a class="leftbar__user__balance" href="balance.html">Balance: <span id="balance"></span></a>
+                             <!-- Информация о подписке -->
+                            <div class="leftbar__user__sub">
+                                <div class="leftbar__user__sub__name">Тариф: <span id="subname"></span></div>
+                                <div class="leftbar__user__sub__date">Осталось: <span id="subdaysleft"></span></div>
+                            </div>
+                            <div class="leftbar__user__name">Логин: <span id="username"></span></div>
+                            <div class="leftbar__user__email">Почта: <span id="email"></span></div>
+                            <a class="leftbar__user__balance" href="balance.html">Баланс: <span id="balance"></span></a>
     
                         </div>
                     </div>
@@ -58,12 +64,13 @@
                         <table class="table">
                             <thead>
                                 <tr>
+                                        <th scope="col">Дата создания</th>
                                     <th scope="col">Название</th>
-                                    <th scope="col">Дата создания</th>
                                     <th scope="col">Статус</th>
                                     <th scope="col">Количество получателей</th>
                                     <th scope="col">Количество отправленных</th>
-                                    <!-- <th scope="col">Количество открытых</th> -->
+                                    <th scope="col">Запустить рассылку</th>
+                                    <th scope="col"></th>
                                     <!-- <th scope="col">Количество кликов</th> -->
                                     <!-- <th scope="col">Количество отписавшихся</th> -->
                                     <!-- <th scope="col">Количество ошибок</th> -->
@@ -89,7 +96,7 @@
                 <h1>Создание рассылки</h1>
             </div>
             <div class="popup__content__form">
-                <form action="http://localhost:5000/api/v1/distribution" method="POST">
+                <form action="http://188.225.85.141:5000/api/v1/distribution" method="POST">
                     <div class="form-group
                     ">
                         <label for="name">Название</label>
